# task-registry

./: .gitignore  README.md  README.ru.md  pyproject.toml
src/task_registry/: manager.py
src/task_registry/schemas/: __init__.py  base.py  dataset.py  experiment.py  framework.py  metric.py  package.py  report.py  run.py  task.py
tests/: test_manager.py
